pages/ksphere/kommander/1.2/clusters/attach-cluster/attach-eks-cluster/index.md
---
layout: layout.pug
navigationTitle: Attach Amazon EKS Cluster to Kommander
title: Attach Amazon EKS Cluster to Kommander
menuWeight: 10
excerpt: Attach an existing EKS cluster to Kommander
beta: true
enterprise: false
---

You can attach existing Kubernetes clusters to Kommander. After attaching the cluster, you can use Kommander to [examine and manage](/ksphere/kommander/1.2/clusters/) this cluster. The following procedure shows how to attach an existing Amazon Elastic Kubernetes Service (EKS) cluster to Kommander.

## Before you begin

This procedure requires the following items and configurations:

- A fully configured and running Amazon [EKS](https://aws.amazon.com/eks/) cluster with administrative privileges.
- Konvoy v1.5.0 or above, [installed and configured](/ksphere/konvoy/1.5/install/) for your Amazon EKS cluster, on your machine.
- Kommander v1.2.0 or above, [installed and configured](/ksphere/kommander/1.2/install/) on your machine.

<p class="message--note"><strong>NOTE: </strong>This procedure assumes you have an existing and spun up Amazon EKS cluster(s) with administrative privileges. Refer to the Amazon <a href="https://aws.amazon.com/eks/" target="_blank">EKS</a> for setup and configuration information. </p>

## Attach Amazon EKS Clusters to Kommander

1. Ensure you are connected to your EKS clusters. Enter the following commands for each of your clusters:

   ```bash
   kubectl config get-contexts
   kubectl config use-context <context for first eks cluster>
   ```

1. Confirm `kubectl` can access the EKS cluster.

   ```bash
   kubectl get no
   ```

1. The metrics that Kommander displays on its cluster view don't come from Prometheus. Rather they come from the Kubernetes metrics API. In order for this API to be available, it must be exposed by a [metrics server][k8s-metrics-server]. In order to do that, you must [deploy the metrics server][deploy-metrics-server], otherwise the EKS cluster may fail to stay attached. To deploy the server, run the following command:

   ```bash
   kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/download/v0.3.6/components.yaml
   ```

1. Verify the `metrics-server` deployment is running the desired number of pods with the following command:

   ```bash
   kubectl get deployment metrics-server -n kube-system
   ```

1. The output will look something like:

   ```bash
   NAME             READY   UP-TO-DATE   AVAILABLE   AGE
   metrics-server   1/1     1            1           6m
   ```

1. Create a service account for Kommander on your EKS cluster.

   ```bash
   kubectl -n kube-system create serviceaccount kommander-cluster-admin
   ```

1. Configure your `kommander-cluster-admin` service account to have `cluster-admin` permissions. Enter the following commands:

   ```yaml
   cat << EOF | kubectl apply -f -
   apiVersion: rbac.authorization.k8s.io/v1beta1
   kind: ClusterRoleBinding
   metadata:
     name: kommander-cluster-admin
   roleRef:
     apiGroup: rbac.authorization.k8s.io
     kind: ClusterRole
     name: cluster-admin
   subjects:
   - kind: ServiceAccount
     name: kommander-cluster-admin
     namespace: kube-system
   EOF
   ```

1. You must create a kubeconfig file that is compatible with the Kommander UI. Enter these commands to set the following environment variables:

   ```bash
   export USER_TOKEN_NAME=$(kubectl -n kube-system get serviceaccount kommander-cluster-admin -o=jsonpath='{.secrets[0].name}')
   export USER_TOKEN_VALUE=$(kubectl -n kube-system get secret/${USER_TOKEN_NAME} -o=go-template='{{.data.token}}' | base64 --decode)
   export CURRENT_CONTEXT=$(kubectl config current-context)
   export CURRENT_CLUSTER=$(kubectl config view --raw -o=go-template='{{range .contexts}}{{if eq .name "'''${CURRENT_CONTEXT}'''"}}{{ index .context "cluster" }}{{end}}{{end}}')
   export CLUSTER_CA=$(kubectl config view --raw -o=go-template='{{range .clusters}}{{if eq .name "'''${CURRENT_CLUSTER}'''"}}{{ index .cluster "certificate-authority-data" }}{{end}}{{ end }}')
   export CLUSTER_SERVER=$(kubectl config view --raw -o=go-template='{{range .clusters}}{{if eq .name "'''${CURRENT_CLUSTER}'''"}}{{ .cluster.server }}{{end}}{{ end }}')
   ```

1. Confirm these variables have been set correctly:

   ```bash
   env | grep CLUSTER
   ```

1. Create your kubeconfig file to use in the Kommander UI. Enter the following commands:

   ```bash
   cat << EOF > kommander-cluster-admin-config
   apiVersion: v1
   kind: Config
   current-context: ${CURRENT_CONTEXT}
   contexts:
   - name: ${CURRENT_CONTEXT}
     context:
       cluster: ${CURRENT_CONTEXT}
       user: kommander-cluster-admin
       namespace: kube-system
   clusters:
   - name: ${CURRENT_CONTEXT}
     cluster:
       certificate-authority-data: ${CLUSTER_CA}
       server: ${CLUSTER_SERVER}
   users:
   - name: kommander-cluster-admin
     user:
       token: ${USER_TOKEN_VALUE}
   EOF
   ```

1. Verify the kubeconfig file can access the EKS cluster.

   ```bash
   kubectl --kubeconfig $(pwd)/kommander-cluster-admin-config get all --all-namespaces
   ```

1. Copy `kommander-cluster-admin-config` file contents to your clipboard.

   ```bash
   cat kommander-cluster-admin-config | pbcopy
   ```

   <p class="message--note"><strong>NOTE: </strong>If you are not using the Mac OS X operating system, this command will not work. If you are using the Linux operating system, enter the following command: <br/><code>cat kommander-cluster-admin-config | xclip -selection clipboard</code></p>

1. Select the **Add Cluster** button in your Kommander window.

1. Select the **Attach Cluster** button. The **Connection Information** window displays.

1. Select **upload**. The upload kubeconfig file dialog box appears. Paste the contents of your clipboard and select **Ok**.

1. Assign a name and label for each cluster in your Kommander project.

1. Edit your project to associate all of your clusters with the project.

1. Select the **Submit** button.

## Related information

For information on related topics or procedures, refer to the following:

- [Configuring and Running Amazon EKS Clusters](https://aws.amazon.com/eks/)

- [Installing and Configuring Konvoy v1.5.0 or above](/ksphere/konvoy/1.5/install/)

- [Installing and Configuring Kommander v1.2.0 or above](/ksphere/kommander/1.2/install/)

- [Working with Kommander Clusters](/ksphere/kommander/1.2/clusters/)

[deploy-metrics-server]: https://docs.aws.amazon.com/eks/latest/userguide/metrics-server.html
[eks]: https://aws.amazon.com/eks/
[k8s-metrics-server]: https://kubernetes.io/docs/tasks/debug-application-cluster/resource-metrics-pipeline/#the-metrics-api
